--- a/examproject/exam_2024.ipynb
+++ b/examproject/exam_2024.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,8 +151,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now to solve this problem, we use a solver to find the optimal labor supply for each different combination of the price levels. This is done in the function `plot_excess_demand`. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +186,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To find equilibrium prices, we use a root solver. When then write a function called `errors`, which contains excess demand for $c_1$ and $\\ell$. Then finally, we use the root solver to set both of these excess demand functions to 0. All these steps are done in the function `solve_equilibrium`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +234,13 @@
    "metadata": {},
    "source": [
     "**Question 3:** What values of $\\tau$ and (implied) $T$ should the government choose to maximize $SWF$?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our first step here is to update the `error` function from before now take into account the effect than chainging $\\tau$ has on $T$ though general equilibrium effects. Now to solve the problem of finding the optimal $\\tau$, we use an inner-outer optimizer structure. The \"inner-optimization\" find equilibrium prices for a given $\\tau$. When then pass these optimal prices into the social welfare function. In the outer loop, we then solve for the optimal $\\tau$. The \"inner-optimzation\" is performed in the function `objective`, which is nested with-in the `find_optimal_tau` function."
    ]
   },
   {
